added HTML, CSS and JS for the weather forecast

--- a/styles.css
+++ b/styles.css
@@ -33,3 +33,16 @@ input {
   font-style: normal;
   font-size: 20px;
 }
+.weather-forecast {
+  margin-top: 20px;
+  text-align: center;
+}
+.weather-forecast-date {
+  font-style: italic bold;
+}
+.weather-forecast-temperatures-min {
+  opacity: 0, 5;
+}
+.weather-forecast-temperatures {
+  font-size: 20px;
+}
