--- a/src/styles.css
+++ b/src/styles.css
@@ -38,11 +38,12 @@ input {
   text-align: center;
 }
 .weather-forecast-date {
-  font-style: italic bold;
+  font-style: italic;
 }
 .weather-forecast-temperatures-min {
+  color: grey;
   opacity: 0, 5;
 }
 .weather-forecast-temperatures {
-  font-size: 20px;
+  font-size: 22px;
 }
